# jobis-backend

./: .env.example  .gitignore  README.md  bot.py  config.py  docker-compose.yml  main.py  pyproject.toml
api/: dependencies.py  routes.py  schemas.py
db/: config.py  init_db.py  models.py  repository.py  session.py
scripts/: agent_full_scenario_smoke.py  agent_smoke.py  gemini_model_smoke.py
services/: agent.py  formatting.py  github.py  llm.py  session.py  webpage.py  workflow.py  workflow_analysis_jobs.py  workflow_common.py  workflow_context.py  workflow_context_analysis.py  workflow_github.py  workflow_interview.py  workflow_jobs.py  workflow_weakness.py
tests/: test_agent_api.py  test_agent_router.py
