[project]
name = "jobis-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.97.0",
    "fastapi>=0.136.1",
    "google-genai>=1.55.0",
    "httpx>=0.28.1",
    "openai>=2.11.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.46.0",
]
